
noinst_LTLIBRARIES = libhamlib-dummy.la
libhamlib_dummy_la_SOURCES = dummy.c rot_dummy.c netrigctl.c netrotctl.c
libhamlib_dummy_la_CFLAGS = -DIN_HAMLIB $(AM_CFLAGS)
# libhamlib_dummy_la_LDFLAGS = -no-undefined -module -avoid-version
#hamlib_dummy_la_LIBADD = $(top_builddir)/src/libhamlib.la \
#			 @MATH_LIBS@

noinst_HEADERS = dummy.h rot_dummy.h

EXTRA_DIST = Android.mk
