
noinst_LTLIBRARIES = libhamlib-easycomm.la
libhamlib_easycomm_la_SOURCES = easycomm.c
libhamlib_easycomm_la_CFLAGS = -DIN_HAMLIB $(AM_CFLAGS)
# libhamlib_easycomm_la_LDFLAGS = -no-undefined -module -avoid-version
# hamlib_easycomm_la_LIBADD = $(top_builddir)/src/libhamlib.la

EXTRA_DIST = easycomm.txt Android.mk

noinst_HEADERS = easycomm.h
