
noinst_LTLIBRARIES = libhamlib-ether6.la
libhamlib_ether6_la_SOURCES = ether6.c ether6.h
libhamlib_ether6_la_CFLAGS = -DIN_HAMLIB $(AM_CFLAGS)
# libhamlib_ether6_la_LDFLAGS = -no-undefined -module -avoid-version
# hamlib_ether6_la_LIBADD = $(top_builddir)/src/libhamlib.la

EXTRA_DIST = README.ether6 ether6.txt
