
noinst_LTLIBRARIES = libhamlib-fodtrack.la
libhamlib_fodtrack_la_SOURCES = fodtrack.c
libhamlib_fodtrack_la_CFLAGS = -DIN_HAMLIB $(AM_CFLAGS)
# libhamlib_fodtrack_la_LDFLAGS = -no-undefined -module -avoid-version
#hamlib_fodtrack_la_LIBADD = $(top_builddir)/lib/libmisc.la \
#				$(top_builddir)/src/libhamlib.la

noinst_HEADERS = fodtrack.h

EXTRA_DIST = Android.mk
