
noinst_LTLIBRARIES = libhamlib-gs232a.la
libhamlib_gs232a_la_SOURCES = gs232a.c gs232b.c gs232.c
libhamlib_gs232a_la_CFLAGS = -DIN_HAMLIB $(AM_CFLAGS)
# libhamlib_gs232a_la_LDFLAGS = -no-undefined -module -avoid-version
#hamlib_gs232a_la_LIBADD = $(top_builddir)/src/libhamlib.la

noinst_HEADERS = gs232a.h

EXTRA_DIST = Android.mk
