
noinst_LTLIBRARIES = libhamlib-heathkit.la
libhamlib_heathkit_la_SOURCES = hd1780.c
libhamlib_heathkit_la_CFLAGS = -DIN_HAMLIB $(AM_CFLAGS)
# libhamlib_heathkit_la_LDFLAGS = -no-undefined -module -avoid-version
#hamlib_heathkit_la_LIBADD = $(top_builddir)/src/libhamlib.la

noinst_HEADERS = hd1780.h

EXTRA_DIST = Android.mk
