noinst_HEADERS = bandplan.h num_stdio.h

nobase_include_HEADERS = hamlib/rig.h hamlib/riglist.h hamlib/rig_dll.h \
		hamlib/rotator.h hamlib/rotlist.h hamlib/rigclass.h \
		hamlib/rotclass.h hamlib/amplifier.h hamlib/amplist.h \
		hamlib/ampclass.h hamlib/multicast.h hamlib/port.h \
		hamlib/amp_state.h hamlib/rig_state.h hamlib/rot_state.h
