KACHINASRCLIST = 505dsp.c

noinst_LTLIBRARIES = libhamlib-kachina.la
libhamlib_kachina_la_SOURCES = $(KACHINASRCLIST) kachina.c
libhamlib_kachina_la_CFLAGS = -DIN_HAMLIB $(AM_CFLAGS)
# libhamlib_kachina_la_LDFLAGS = -no-undefined -module -avoid-version
#hamlib_kachina_la_LIBADD = $(top_builddir)/src/libhamlib.la

noinst_HEADERS = kachina.h

EXTRA_DIST = Android.mk
